[project]
name = "finetuner"
version = "0.1.0"
description = ""
authors = [{ name = "gbatra3", email = "gbatra3@wisc.edu" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "transformers (>=4.51.3,<5.0.0)",
  "datasets (>=3.5.0,<4.0.0)",
  "accelerate (>=1.6.0,<2.0.0)",
  "pydantic (>=2.11.3,<3.0.0)",
  "pydantic-settings (>=2.9.1,<3.0.0)",
  "wandb (>=0.19.9,<0.20.0)",
  "matplotlib (>=3.10.1,<4.0.0)",
  "wordcloud (>=1.9.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
